# checkmate

./: .gitignore  LATTICE-SPEC.md  README.md  pyproject.toml
docs/: IMPLEMENTATION_PLAN.md  VM_RUNBOOK.md  checkmate-alpha1.md
docs/benchmarks/checkmate-alpha1/: ddp-alpha-bench.json  profile-summary.md  single-gpu-alpha-bench.json
openspec/changes/implement-lattice-system/: design.md  proposal.md  tasks.md
openspec/changes/implement-lattice-system/specs/ddp-runtime/: spec.md
openspec/changes/implement-lattice-system/specs/gpu-chess-kernel/: spec.md
openspec/changes/implement-lattice-system/specs/gpu-self-play-generation/: spec.md
openspec/changes/implement-lattice-system/specs/lattice-model-evaluation/: spec.md
openspec/changes/implement-lattice-system/specs/vram-replay-training/: spec.md
openspec/changes/prepare-checkmate-alpha1-optimizations/: design.md  proposal.md  tasks.md
src/lattice/: __init__.py  alpha.py  benchmarking.py  checkpoint.py  cli.py  config.py  ddp_verify.py  ema.py  evaluation.py  generation.py  labeling.py  losses.py  model.py  profiling.py  replay.py  runtime.py  synthetic.py  trainer.py  training.py  tripwire.py
src/lattice/chess/: __init__.py  benchmark.py  encoding.py  movegen.py  reference.py  state.py  tables.py
tests/: test_alpha_config.py  test_alpha_readiness.py  test_benchmarking.py  test_chess_movegen.py  test_chess_reference.py  test_chess_state.py  test_config.py  test_model_contract.py  test_replay_labeling_generation.py  test_runtime_scaffolding.py  test_synthetic_training.py
(+3 files in other folders)
