[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "lattice-checkmate"
version = "0.1.0"
description = "GPU-resident chess neural-network training system from the LATTICE spec."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11",
    "numpy>=2.0",
    "pydantic>=2.8",
    "pyyaml>=6.0",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
gpu = [
    "torch>=2.5",
]

[project.scripts]
lattice = "lattice.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "cuda: requires a CUDA GPU",
    "ddp: requires torchrun with two CUDA GPUs",
    "performance: benchmark or throughput-oriented test",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["lattice"]
